; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ppcfbsd-tdep.c_insns_match_pattern.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ppcfbsd-tdep.c_insns_match_pattern.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.insn_pattern = type { i32, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.insn_pattern*, i32*)* @insns_match_pattern to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @insns_match_pattern(i32 %0, %struct.insn_pattern* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.insn_pattern*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store %struct.insn_pattern* %1, %struct.insn_pattern** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 0, i32* %8, align 4
  br label %9

9:                                                ; preds = %62, %3
  %10 = load %struct.insn_pattern*, %struct.insn_pattern** %6, align 8
  %11 = load i32, i32* %8, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds %struct.insn_pattern, %struct.insn_pattern* %10, i64 %12
  %14 = getelementptr inbounds %struct.insn_pattern, %struct.insn_pattern* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %65

17:                                               ; preds = %9
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @read_insn(i32 %18)
  %20 = load i32*, i32** %7, align 8
  %21 = load i32, i32* %8, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i32, i32* %20, i64 %22
  store i32 %19, i32* %23, align 4
  %24 = load i32*, i32** %7, align 8
  %25 = load i32, i32* %8, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i32, i32* %24, i64 %26
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.insn_pattern*, %struct.insn_pattern** %6, align 8
  %30 = load i32, i32* %8, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds %struct.insn_pattern, %struct.insn_pattern* %29, i64 %31
  %33 = getelementptr inbounds %struct.insn_pattern, %struct.insn_pattern* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 8
  %35 = and i32 %28, %34
  %36 = load %struct.insn_pattern*, %struct.insn_pattern** %6, align 8
  %37 = load i32, i32* %8, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds %struct.insn_pattern, %struct.insn_pattern* %36, i64 %38
  %40 = getelementptr inbounds %struct.insn_pattern, %struct.insn_pattern* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 4
  %42 = icmp eq i32 %35, %41
  br i1 %42, label %43, label %46

43:                                               ; preds = %17
  %44 = load i32, i32* %5, align 4
  %45 = add nsw i32 %44, 4
  store i32 %45, i32* %5, align 4
  br label %61

46:                                               ; preds = %17
  %47 = load %struct.insn_pattern*, %struct.insn_pattern** %6, align 8
  %48 = load i32, i32* %8, align 4
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds %struct.insn_pattern, %struct.insn_pattern* %47, i64 %49
  %51 = getelementptr inbounds %struct.insn_pattern, %struct.insn_pattern* %50, i32 0, i32 2
  %52 = load i64, i64* %51, align 8
  %53 = icmp ne i64 %52, 0
  br i1 %53, label %54, label %59

54:                                               ; preds = %46
  %55 = load i32*, i32** %7, align 8
  %56 = load i32, i32* %8, align 4
  %57 = sext i32 %56 to i64
  %58 = getelementptr inbounds i32, i32* %55, i64 %57
  store i32 0, i32* %58, align 4
  br label %60

59:                                               ; preds = %46
  store i32 0, i32* %4, align 4
  br label %66

60:                                               ; preds = %54
  br label %61

61:                                               ; preds = %60, %43
  br label %62

62:                                               ; preds = %61
  %63 = load i32, i32* %8, align 4
  %64 = add nsw i32 %63, 1
  store i32 %64, i32* %8, align 4
  br label %9

65:                                               ; preds = %9
  store i32 1, i32* %4, align 4
  br label %66

66:                                               ; preds = %65, %59
  %67 = load i32, i32* %4, align 4
  ret i32 %67
}

declare dso_local i32 @read_insn(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
